Mon Mar 19 19:16:34 GMT 2001 Olly Betts

	* Added test getdoc1 to check exceptions are thrown for out-of-range
	  docids (currently they aren't for quartz and muscat36 backends).

Mon Mar 19 17:17:31 GMT 2001 Olly Betts

	* New simpler implementation of leak detection in testsuite.
	  Currently doesn't support malloc/calloc/realloc/free.

Mon Mar 19 16:46:16 GMT 2001  Richard Boulton <richard.boulton@omsee.com>

	* Further small modification to omsee-config: will now look in
	  .libs subdirectories, too.

Mon Mar 19 15:57:18 GMT 2001  Richard Boulton <richard.boulton@omsee.com>

	* Update omsee-config to work when a prefix is specified that
	  points directly to the directory with the library, rather than
	  expecting the library to be in a subdir "libs/".  (libs/ is
	  still used if it exists).

	* Update omsee.m4, to use omsee-config even when using an
	  uninstalled version of omsee.  This in turn fixes problems using
	  uninstalled versions of omsee with STLport.

Fri Mar 16 18:14:52 GMT 2001  Richard Boulton <richard.boulton@omsee.com>

	* Updated licenses, to include year 2001.

Fri Mar 16 15:40:49 GMT 2001  Richard Boulton <richard.boulton@omsee.com>

	* Fix up small bug in quartztest causing it to fail for lack of an
	  expected exception.  Initialise values in quartz_positionlist.cc
	  when position list is not present.

Thu Mar 15 17:40:38 GMT 2001  Richard Boulton <richard.boulton@omsee.com>

	* Make timeout absolute, rather than cumulative, when fetching
	  multiple documents from database: if two nodes fail, the total
	  timeout should still be that specified, not twice it.

	* Make the timeout set by SocketClient::set_query() get reset
	  correctly if an exception happens (which used to prevent
	  SocketClient::get_mset() ever getting called).

Thu Mar 15 17:06:51 GMT 2001 Olly Betts

	* Oops, checked in too much - backing out the wrong stuff.

Thu Mar 15 16:30:14 GMT 2001 Olly Betts

	* Include autoconf/definedir.m4 in tarball.
