@@ -128,7 +128,7 @@ class QuartzDatabase : public Database {
 
 	LeafPostList * do_open_post_list(const om_termname & tname) const;
 	LeafTermList * open_term_list(om_docid did) const;
-	Document * open_document(om_docid did) const;
+	Document * open_document(om_docid did, bool lazy = false) const;
 	AutoPtr<PositionList> open_position_list(om_docid did,
 					  const om_termname & tname) const;
 	TermList * open_allterms() const;
@@ -200,7 +200,7 @@ class QuartzWritableDatabase : public Database {
 
 	LeafPostList * do_open_post_list(const om_termname & tname) const;
 	LeafTermList * open_term_list(om_docid did) const;
-	Document * open_document(om_docid did) const;
+	Document * open_document(om_docid did, bool lazy = false) const;
 	AutoPtr<PositionList> open_position_list(om_docid did,
 					  const om_termname & tname) const;
 	TermList * open_allterms() const;
